--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/fweekshow/craycray-site#readme",
   "description": "",
   "dependencies": {
-    "@farcaster/miniapp-sdk": "^0.2.1"
+    "@farcaster/miniapp-sdk": "^0.2.1",
+    "@farcaster/quick-auth": "^0.8.0",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.7"
   }
 }
