--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/quick-auth": "^0.0.8",
+    "@tailwindcss/vite": "^4.1.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
